lparser really added now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ set(engine_sources
 	easy_image.cc
 	engine.cc
 	ini_configuration.cc
-)
+		EngineModules/AbstractModule.cpp EngineModules/AbstractModule.h EngineModules/_2DLSystemModule.cpp EngineModules/_2DLSystemModule.h EngineModules/Point2D.cpp EngineModules/Point2D.h EngineModules/Line2D.cpp EngineModules/Line2D.h EngineModules/Lines2D.cpp EngineModules/Lines2D.h)
 
 ############################################################
 # Create an executable
